[package]
name = "thunder_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.26"
futures-core = "0.3.26"
futures-io = "0.3.26"

[lib]
name = "thunder_rs"
crate-type = ["lib"]
