[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thunder_rs = { path = "../../sdk" }

[lib]
name        = "hello_world"
path        = "src/lib.rs"
crate-type  = ["dylib"]
